# react-native-lxmf

./: .gitignore  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  START_HERE.md
.github/workflows/: publish-npm.yml
expo-module/: app.plugin.js  package.json
expo-module/android/src/main/kotlin/expo/modules/lxmf/: BleManager.kt  LxmfModule.kt  NusManager.kt
expo-module/example/: package-lock.json
expo-module/example/app/(tabs)/: _layout.tsx  conversations.tsx  index.tsx  network.tsx  playground.tsx
expo-module/example/app/conversation/: [address].tsx
expo-module/example/components/ui/: icon-symbol.tsx
expo-module/example/context/: LxmfContext.tsx
expo-module/ios/: BLEManager.swift  LxmfModule.swift
expo-module/src/: LxmfModule.ts  index.ts  useLxmf.ts
rust-core/: Cargo.toml
rust-core/patches/rns-transport/: Cargo.toml
rust-core/patches/rns-transport/src/: channel_buffer.rs  delivery.rs  destination.rs  iface.rs  lib.rs  receipt.rs
rust-core/patches/rns-transport/src/crypt/: fernet.rs
rust-core/patches/rns-transport/src/destination/: link.rs  tests.rs
rust-core/patches/rns-transport/src/destination/link/: proof.rs
rust-core/patches/rns-transport/src/iface/: tcp_client.rs
rust-core/patches/rns-transport/src/resource/: manager.rs  tests.rs
rust-core/patches/rns-transport/src/transport/: announce_limits.rs  announce_table.rs  config.rs  core.rs  handler.rs  jobs.rs  link_table.rs  links.rs  mod.rs  path.rs  path_requests.rs  path_table.rs  tests.rs  wire.rs
rust-core/src/: beacon.rs  beacon_server.rs  ffi.rs  group.rs  jni_bridge.rs  lib.rs  node.rs  store.rs
rust-core/src/tests/: event_decode.rs  lxmf_wire.rs  store_persist.rs
