[package]
name = "lxmf-react-native-rust"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "React Native bridge for LXMF-rs mesh networking"

[lib]
name = "lxmf_rn"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Full Reticulum protocol stack — real identity, announces, routing, links
reticulum-rs-transport = { git = "https://github.com/FreeTAKTeam/LXMF-rs.git" }

# Keep embedded FFI for BLE mode (mode 0) and legacy bridge (mode 3)
rns-embedded-ffi = { git = "https://github.com/FreeTAKTeam/LXMF-rs.git" }
rns-embedded-core = { git = "https://github.com/FreeTAKTeam/LXMF-rs.git" }

# Async runtime — needed by rns-transport
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal", "net", "io-util"] }

# Randomness for identity generation
rand_core = { version = "0.6", features = ["getrandom"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"

# SQLite for message persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Hex encoding
hex = "0.4"

# Ed25519 signature verification for inbound LXMF packets
ed25519-dalek = "2.1"

# Base64 encoding for JNI message payloads
base64 = "0.22"

# zlib compression for beacon RPC payloads (b"\x00zl" magic prefix)
flate2 = "1"

# SHA-256 for Anchor instruction discriminators
sha2 = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
android_logger = "0.13"

[patch."https://github.com/FreeTAKTeam/LXMF-rs.git"]
reticulum-rs-transport = { path = "patches/rns-transport" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
