[package]
name = "reticulum-rs-transport"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/FreeTAKTeam/LXMF-rs"
description = "Transport layer for the Reticulum network stack (patched: increased broadcast channel capacity)."

[lib]
name = "rns_transport"

[dependencies]
aes = "0.8.4"
bzip2 = "0.4"
cbc = "0.1.2"
crypto-common = { version = "0.1.6", features = ["rand_core"] }
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"
hmac = "0.12.1"
rmp-serde = "1.3.0"
rmpv = "1.3.0"
rmp = "0.8.14"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
log = "0.4"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-serial = "5.4"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rns-core = { package = "reticulum-rs-core", version = "0.2.0", git = "https://github.com/FreeTAKTeam/LXMF-rs.git" }

[features]
default = []
fernet-aes128 = []

[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
